--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -361,6 +361,11 @@
               <transport-pdc-report></transport-pdc-report>
             </div>
           </section>
+          <section data-category="zone-cancellation-card">
+            <div class="col-md-12">
+              <zone-cancellation-card></zone-cancellation-card>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
