--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -312,3 +312,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="zone-cancellation-card/zone-cancellation-card.html">
 <link rel="import" href="transport-processing-service/transport-processing-service.html">
 <link rel="import" href="transport-pdc-report/transport-pdc-report.html">
+<link rel="import" href="transport-discount-card/transport-discount-card.html">
+<link rel="import" href="transport-discount-itemcard/transport-discount-itemcard.html">
