--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -366,6 +366,11 @@
               <zone-cancellation-card></zone-cancellation-card>
             </div>
           </section>
+          <section data-category="transport-discount-card">
+            <div class="col-md-12">
+              <transport-discount-card></transport-discount-card>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
