--- a/app/elements/detailed-feedue-report/detailed-feedue-report.html
+++ b/app/elements/detailed-feedue-report/detailed-feedue-report.html
@@ -120,7 +120,7 @@
         this.flag=1;
         type=(e.target.selectedItem.textContent).trim();
         // this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
-        // this.$.feereportservice.FnFetchDueReportService(academicyear,grade,type);
+        this.$.feereportservice.FnFetchDueReportService(academicyear,grade,type);
       },
       FnView:function(){
         // this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
@@ -136,7 +136,7 @@
       FnSelectGrade:function(e){
         grade=(e.target.selectedItem.textContent).trim();
         if(this.flag==1){
-        // this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
+        this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
         // this.$.feereportservice.FnFetchDueReportService(academicyear,grade,type);
         }
       },
@@ -144,7 +144,7 @@
         academicyear=(e.target.selectedItem.textContent).trim();
         localStorage.setItem("curr_sess_academicyear",academicyear);
         if(this.flag==1){
-        // this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
+        this.$.feereportservice.FnFetchAllStudentStructureService(academicyear,grade);
         // this.$.feereportservice.FnFetchDueReportService(academicyear,grade,type);
 
         }
