--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -371,6 +371,11 @@
               <transport-discount-card></transport-discount-card>
             </div>
           </section>
+          <section data-category="transport-dashboard">
+            <div class="col-md-12">
+              <transport-dashboard></transport-dashboard>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
