--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -314,3 +314,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="transport-pdc-report/transport-pdc-report.html">
 <link rel="import" href="transport-discount-card/transport-discount-card.html">
 <link rel="import" href="transport-discount-itemcard/transport-discount-itemcard.html">
+<link rel="import" href="transport-dashboard/transport-dashboard.html">
